package com.example.projet_gunslay_etienne.domain.enums;

public enum TypeCarte {
    VISA_ELECTRON,
    VISA_PREMIER
}
