@startuml
skinparam classAttributeIconSize 0

' =========================
'   COUCHE DOMAINE (Entities)
' =========================
package "Domaine (Entities)" {

  class Agence <<Entity>> {
    - id : Long
    - numeroAgence : String
    - dateCreation : LocalDate
  }

  class Conseiller <<Entity>> {
    - id : Long
    - nom : String
    - prenom : String
  }

  class Client <<Entity>> {
    - id : Long
    - nom : String
    - prenom : String
    - adresse : String
    - codePostal : String
    - ville : String
    - telephone : String
    - conseiller : Conseiller
  }

  abstract class CompteBancaire <<Entity>> {
    - id : Long
    - numeroCompte : String
    - solde : BigDecimal
    - dateOuverture : LocalDate
  }

  class CompteCourant <<Entity>> extends CompteBancaire {
    - decouvert : BigDecimal
  }

  class CompteEpargne <<Entity>> extends CompteBancaire {
    - tauxRemuneration : BigDecimal
  }

  enum TypeCarte {
    VISA_ELECTRON
    VISA_PREMIER
  }

  class CarteBancaire <<Entity>> {
    - id : Long
    - typeCarte : TypeCarte
    - active : boolean
  }

  ' Relations domaine
  Agence "1" o-- "*" Conseiller
  Conseiller "1" o-- "0..10" Client

  Client "1" o-- "0..1" CompteCourant
  Client "1" o-- "0..1" CompteEpargne

  CompteCourant "1" o-- "*" CarteBancaire
  CarteBancaire "*" --> TypeCarte
}

' =========================
'   COUCHE REPOSITORY
' =========================
package "Repositories" {

  interface AgenceRepository <<Repository>> {
    ' JpaRepository<Agence, Long>
    ' findByNumeroAgence(numero : String)
  }

  interface ConseillerRepository <<Repository>> {
    ' JpaRepository<Conseiller, Long>
  }

  interface ClientRepository <<Repository>> {
    ' JpaRepository<Client, Long>
    ' long countByConseiller_Id(conseillerId : Long)
  }

  interface CompteBancaireRepository <<Repository>> {
    ' JpaRepository<CompteBancaire, Long>
    ' findByNumeroCompte(numero : String)
  }

  interface CarteBancaireRepository <<Repository>> {
    ' JpaRepository<CarteBancaire, Long>
  }
}

' =========================
'     COUCHE SERVICE
' =========================
package "Services" {

  class ClientService {
    + createClient(...)
    + updateClient(id : Long, ...)
    + getClient(id : Long)
    + deleteClient(id : Long) : void
    + listClients() : List<Client>
  }

  class ConseillerService {
    + create(conseillerCreateDTO) : ConseillerDTO
    + findAll() : List<ConseillerDTO>
    + findById(id : Long) : ConseillerDTO
    + affecterClient(conseillerId : Long, clientId : Long) : void
  }

  class VirementService {
    + virement(compteDebiteur : CompteBancaire, compteReceveur : CompteBancaire, montant : BigDecimal) : void
  }

  class SimulationCreditService {
    + simulationCredit(client : Client, montant : BigDecimal, dureeMois : int) : boolean
  }

  class AuditService {
    + auditClients() : List<CompteBancaire>
    + isConforme(compte : CompteBancaire) : boolean
  }

  class CompteService {
    + credit(compte : CompteBancaire, montant : BigDecimal) : void
    + debit(compte : CompteBancaire, montant : BigDecimal) : void
  }
}

' =========================
'   COUCHE CONTROLLER (REST)
' =========================
package "Controllers" {

  class ClientController <<Controller>> {
    + getClients() : List<Client>
    + getClient(id : Long) : Client
    + createClient(...) : Client
    + updateClient(id : Long, ...) : Client
    + deleteClient(id : Long) : void
  }

  class ConseillerController <<Controller>> {
    + createConseiller(...) : ConseillerDTO
    + getConseillers() : List<ConseillerDTO>
    + getConseiller(id : Long) : ConseillerDTO
    + affecterClient(conseillerId : Long, clientId : Long) : void
  }

  class VirementController <<Controller>> {
    + effectuerVirement(numDebiteur : String, numReceveur : String, montant : BigDecimal) : void
  }

  class SimulationCreditController <<Controller>> {
    + simulerCredit(clientId : Long, montant : BigDecimal, dureeMois : int) : boolean
  }

  class AuditController <<Controller>> {
    + getAudit() : List<CompteBancaire>
  }

  class CompteController <<Controller>> {
    + credit(numeroCompte : String, montant : BigDecimal) : void
    + debit(numeroCompte : String, montant : BigDecimal) : void
  }
}

' =========================
'   DEPENDANCES ENTRE COUCHES
' =========================

' Controllers -> Services
ClientController ..> ClientService
ConseillerController ..> ConseillerService
VirementController ..> VirementService
SimulationCreditController ..> SimulationCreditService
AuditController ..> AuditService
CompteController ..> CompteService

' Services -> Repositories
ClientService ..> ClientRepository
ConseillerService ..> ConseillerRepository
ConseillerService ..> AgenceRepository
ConseillerService ..> ClientRepository

CompteService ..> CompteBancaireRepository
VirementService ..> CompteBancaireRepository
SimulationCreditService ..> ClientRepository
SimulationCreditService ..> CompteBancaireRepository
AuditService ..> CompteBancaireRepository

@enduml